# DEPRECATED_FreeYourSoul_WorldServer

./: CMakeLists.txt  README.md
FySMQ/include/bus/: FysBus.hh
FySMQ/test/: TestUnitMQ.cpp
Protobuff/: CMakeLists.txt  FySAuthenticationLoginMessage.proto  FySAuthenticationResponse.proto
Server/include/network/: ClusterManager.hh  PlayerManager.hh  SessionManager.hh  TcpConnection.hh  WorldServerCluster.hh
Server/include/ws/: Authenticator.hh  Context.hh  GameServerInstance.hh  GamingListenner.hh  WorldEngine.hh  WorldServer.hh
Server/include/ws/listener/: Authenticator.hh  GamingListener.hh
Server/include/ws/tmx/: Map.hh
Server/resource/: worldserver.ini  worldserver_1a.ini  worldserver_1b.ini
Server/resource/tmx_maps/: FF6MapTileCitiesTown.tsx  map.tmx  testFile.tmx
Server/src/: main.cpp
Server/src/gateway/: GameServerInstance.cpp  WorldServer.cpp
Server/src/network/: ClusterManager.cpp  PlayerManager.cpp  SessionManager.cpp  TcpConnection.cpp  WorldServerCluster.cpp
Server/src/ws/: Authenticator.cpp  Context.cpp  GameServerInstance.cpp  GamingListenner.cpp  WorldEngine.cpp  WorldServer.cpp
Server/src/ws/listener/: Authenticator.cpp  GamingListener.cpp
Server/src/ws/tmx/: Map.cpp
Utils/src/: PlayerDataType.hh  TokenGenerator.cpp
Utils/test/: TestCheckVar.cpp
